[tool.poetry]
name = "ocr-agl"
version = "1.1.0"
description = "OCR API: This OCR API is an application for extracting text from images and PDF files. It is built using Flask, a Python web framework. It utilizes the pytesseract OCR library, pymupdf and the PIL library for image processing."
authors = ["Max Hild <Maxhild10@gmail.com>", "Thomas Lux <lux_t1@ukw.de>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "ocr_agl"}]

[tool.poetry.dependencies]
python = "^3.10"
anyio = "==3.7.0"
blinker = "==1.6.2"
certifi = "==2023.5.7"
cffi = "==1.15.1"
charset-normalizer = "==3.1.0"
ci-info = "==0.3.0"
click = "==8.1.3"
configobj = "==5.0.8"
configparser = "==5.3.0"
etelemetry = "==0.3.0"
filelock = "==3.12.2"
flask = "==2.3.2"
frontend = "==0.0.3"
future = "==0.18.3"
h11 = "==0.14.0"
httplib2 = "==0.22.0"
idna = "==3.4"
isodate = "==0.6.1"
itsdangerous = "==2.1.2"
jinja2 = "==3.1.2"
jsonify = "==0.5"
looseversion = "==1.2.0"
lxml = "==4.9.2"
markupsafe = "==2.1.3"
networkx = "==3.1"
nibabel = "==5.1.0"
nipype = "==1.8.6"
numpy = "==1.24.3"
packaging = "==23.1"
pandas = "==2.0.2"
pathlib = "==1.0.1"
pdf2image = "==1.16.3"
pillow = "==9.5.0"
poppler-utils = "==0.1.0"
prov = "==2.0.0"
pycparser = "==2.21"
pydot = "==1.4.2"
pymupdf = "==1.22.3"
pyparsing = "==3.0.9"
pytesseract = "==0.3.10"
python-dateutil = "==2.8.2"
pytils = "==0.4.1"
pytz = "==2023.3"
pyxnat = "==1.5"
rdflib = "==6.3.2"
requests = "==2.31.0"
scipy = "==1.10.1"
simplejson = "==3.19.1"
six = "==1.16.0"
sniffio = "==1.3.0"
starlette = "==0.28.0"
tools = "==0.1.9"
traits = "==6.3.2"
tzdata = "==2023.3"
urllib3 = "==2.0.3"
uvicorn = "==0.22.0"
werkzeug = "==2.3.6"
flask-testing = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[classifiers]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache License 2.0"
]

[tool.poetry.urls]
"Homepage" = "https://github.com/wg-lux/OCR_Reader/tree/main"
"Bug Tracker" = "https://github.com/wg-lux/OCR_Reader/issues"
